# vue-drf-jwt

./: .gitignore  README.md
vdjapi/: Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
vdjapi/api/: middleware.py  models.py  urls.py
vdjapi/api/v1/: urls.py
vdjapi/api/v1/auth/: serializers.py  urls.py  views.py
vdjapi/api/v2/auth/: urls.py  views.py
vdjapi/authx/: __init__.py  admin.py  authentication.py  models.py  permissions.py  utils.py
vdjapi/authx/migrations/: 0001_initial.py
vdjapi/common/: context_processors.py  encoder.py  fields.py  filters.py  models.py  pagination.py  serializers.py
vdjapi/templates/common/: settings.html
vdjapi/templates/registration/: login.html  signup.html
vdjapi/vdjapi/: urls.py  views.py  wsgi.py
vdjapi/vdjapi/settings/: default.py
vdjfed/: README.md  index.html  package-lock.json  package.json
vdjfed/config/: index.js
vdjfed/src/: main.js
vdjfed/src/components/auth/: auth.js  index.js  token.js  utils.js
vdjfed/src/components/template/: Base.vue  Footer.vue  Header.vue
vdjfed/src/locales/: en.js  index.js  zh-Hans.js
vdjfed/src/router/: index.js
vdjfed/src/views/: Home.vue
vdjfed/src/views/account/: Me.vue  Profile.vue  routes.js
vdjfed/src/views/login/: Login.vue
vdjfed/src/views/misc/: 401.vue  403.vue  404.vue  Template.vue
