[tool.poetry]
name = "vdjapi"
version = "0.1.0"
description = ""
authors = ["Ace <ace.jl.han@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
requests = "^2.25.1"
djangorestframework-simplejwt = "^4.6.0"
djangorestframework-filters = "1.0.0.dev2"
django-rest-framework-social-oauth2 = "^1.1.0"
PyMySQL = {version = "^1.0.2", extras = ["rsa"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
